# spectrumsaber

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  airflow.cfg  core_schema.py  docker-compose.yml  manage.py  mcp_launcher.sh  process_coverage  pyproject.toml  requirements.txt  run_dag.py  setup.cfg  tox.ini
.claude/: settings.json
containers/: airflow.Dockerfile  app.Dockerfile  docker-compose.yml  tests.sh
containers/airflow/: Dockerfile
containers/app/: Airflow  Dockerfile  docker-compose.yml
containers/compose/: docker-compose.yml
containers/tests/: tests.sh
dags/: ftp_scanner.py  hydrology.py  operators.py  process_coverage.py  utils.py
dags/hydrology/: process_campaigns.py  process_data_points.py  process_measurements.py
dags/urban/: process_campaigns.py  process_data_points.py  process_measurements.py
docs/: run.md  setup.md  spectrum_bar.py  spectrum_combined.py
docs/design/: etl.md  server.md  spectrumsaber_client.md
docs/diagrams/: architecture.py  campaigns.dot  conae_ftp.py  etl.py  generate_graphs.md  generate_plantuml_pngs.py
docs/diagrams/dags/: process_campaigns.dot  process_coverage.dot  process_data_points.dot  process_measurements.dot
docs/diagrams/django_apps/: campaigns.dot  places.dot
docs/diagrams/plantuml/: architecture.puml  builder_pattern.puml  builders.puml  conae_ftp_structure.puml  dag_process_campaigns.puml  dag_process_coverage.puml  dag_process_data_points.puml  dag_process_measurements.puml  directors.puml  etl_process.puml  grafo_cc.puml  uml_campaigns.puml  uml_places.puml
docs/quality/: cc_report.py  mi_report.py  scatter_report.py
environments/: common.env  docker.env  local.env  production.env  testing.env
requirements/: libs.txt  local.txt
resources/: constants.py  utils.py
resources/airflow/: operators.py  utils.py
resources/airflow/config/: airflow.cfg
resources/airflow/dags/: builder.py  operators.py  process_coverage.py
resources/campaigns/: admin.py  apps.py  campaign_creators.py  data_point_creators.py  graphql_schema.py  measurement_creators.py  models.py  serializers.py
resources/campaigns/dags/: builder.py  process_campaigns.py  process_data_points.py  process_measurements.py
resources/campaigns/migrations/: 0006_alter_campaign_created_at_alter_coverage_created_at_and_more.py  0006_created_at_auto_add.py  0007_alter_category_name.py  0009_is_valid_base_file.py  0010_invalid_proxies.py  0011_alter_campaign_metadata_alter_campaign_path_and_more.py  0011_alter_datapoint_order.py  0012_alter_campaign_description_and_more.py  0019_unmatchedcampaign_unmatcheddatapoint_and_more.py
resources/campaigns/tests/: test_models.py
resources/dags/: ftp_scanner.py  utils.py
resources/integrations/: apps.py
resources/places/: admin.py  apps.py  models.py
resources/places/migrations/: 0004_alter_district_code.py  0006_alter_country_options.py
resources/templates/: base.html  home.html
scripts/: text2gql_demo.py
service/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
spectrumsaber/: cfg.py  client.py  llm.py  text2gql.py
spectrumsaber/tests/: test_client.py
src/: decorators.py  logging_cfg.py  utils.py
src/airflow/: gql_types.py  operators.py  schema.py  tasks.py  types.py  utils.py
src/airflow/config/: airflow.cfg  webserver_config.py
src/airflow/dags/: process_campaigns.py  process_coverage.py  process_data_points.py  process_measurements.py
src/airflow/tests/: conftest.py  test_operators.py  test_tasks.py  test_utils.py
src/campaigns/: admin.py  apps.py  builders.py  directors.py  gql_types.py  graphql_schema.py  measurement_creators.py  models.py  schema.py  serializers.py  signals.py  types.py
src/campaigns/dags/: builder.py  process_campaigns.py  process_coverage.py  process_data_points.py  process_measurements.py
src/campaigns/migrations/: 0001_initial.py  0002_remove_campaign_measuring_tool_and_more.py  0002_rename_data_points_measurement_data_point.py  0003_alter_category_name.py  0003_alter_complimentarydata_options_and_more.py  0004_alter_category_name.py  0004_alter_complimentarydata_complement_type.py  0005_campaign_ftp_created_at_coverage_ftp_created_at_and_more.py  0007_alter_category_name.py  0008_alter_category_options_alter_campaign_coverage.py  0009_campaign_last_synced_at_coverage_last_synced_at_and_more.py  0010_campaign_scan_complete_coverage_scan_complete_and_more.py  0013_alter_campaign_district_and_more.py  0014_campaign_is_unmatched_coverage_is_unmatched_and_more.py  0015_alter_category_name.py  0016_remove_campaign_scan_complete_and_more.py  0017_campaign_scan_complete_coverage_scan_complete_and_more.py  0018_complimentarydata.py  0020_allcampaigns.py  0021_pathrule.py  0022_remove_pathrule_field_name.py  0023_unmatchedfile_delete_allcampaigns_and_more.py  0024_alter_unmatchedfile_parent_path.py  0025_unmatchedfile_level.py  0026_pathrule_date_format.py  0027_alter_datapoint_order.py  0028_alter_spreadsheet_sheet_type.py  0029_alter_pathrule_level_alter_unmatchedfile_level.py  0030_alter_campaign_options_and_more.py
src/campaigns/tests/: test_builders.py  test_campaigns_models.py  test_directors.py  test_gql_types.py  test_models.py  test_schema.py  test_signals.py
src/etl/: __init__.py  operators.py  tasks.py  utils.py
src/etl/dags/: process_campaigns.py  process_coverage.py  process_data_points.py  process_measurements.py
src/etl/tests/: __init__.py  conftest.py  test_operators.py  test_tasks.py  test_tasks_build.py  test_tasks_core.py  test_utils.py  test_utils_params.py  test_utils_recursive.py
src/places/: admin.py  apps.py  models.py
src/places/migrations/: 0001_initial.py  (+3 more)
src/places/tests/: test_commands.py
src/server/: __init__.py  asgi.py  logging_cfg.py  schema.py  settings.py  urls.py  wsgi.py
src/spectrumsaber/: __init__.py  airflow_client.py  cfg.py  cli.py  client.py  ftp_client.py  graphql_client.py  interactive.py  llm.py  saber_client.py  text2gql.py
src/templates/: base.html  home.html
src/users/: apps.py  models.py  schema.py  signals.py  test_signals.py  tests.py
(+90 files in other folders)
