[project]
name = "spectrumsaber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow==2.10.2",
    "apache-airflow-providers-amazon==9.0.0",
    "django==5.0.4",
    "django-admin-autocomplete-filter==0.7.1",
    "django-admin-rangefilter==0.13.0",
    "django-extensions==3.2.3",
    "flake8>=7.2.0",
    "graphene-django==3.2.2",
    "ipdb>=0.13.13",
    "openpyxl==3.1.3",
    "pandas==2.2.2",
    "psycopg2-binary==2.9.9",
    "pyrebase4>=4.8.0",
    "pytest==8.2.2",
    "pytest-django==4.8.0",
    "serpy==0.3.1",
    "tox==4.14.2",
    "xmlsec==1.3.14",
]

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']

[tool.pylint.'MESSAGES CONTROL']
disable = ["C0114", "C0115", "C0116"]
