[project]
name = "spectrumsaber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "alembic==1.15.2",
    "anyio==4.9.0",
    "apache-airflow==2.10.2",
    "apache-airflow-providers-amazon==9.0.0",
    "apache-airflow-providers-common-compat==1.6.0",
    "apache-airflow-providers-common-io==1.5.2",
    "apache-airflow-providers-common-sql==1.24.1",
    "apache-airflow-providers-fab==1.5.3",
    "apache-airflow-providers-ftp==3.12.3",
    "apache-airflow-providers-http==5.2.0",
    "apache-airflow-providers-imap==3.8.3",
    "apache-airflow-providers-smtp==2.0.2",
    "apache-airflow-providers-sqlite==4.0.1",
    "apispec==6.8.1",
    "argcomplete==3.6.1",
    "asgiref==3.8.1",
    "asn1crypto==1.5.1",
    "asttokens==3.0.0",
    "async-timeout==5.0.1 ; python_full_version < '3.11'",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.3",
    "blinker==1.9.0",
    "boto3==1.37.25",
    "botocore==1.37.25",
    "cachelib==0.13.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1 ; platform_python_implementation != 'PyPy'",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "clickclick==20.10.2",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "configupdater==3.2",
    "connexion==2.14.2",
    "cron-descriptor==1.4.5",
    "croniter==6.0.0",
    "cryptography==44.0.2",
    "decorator==5.2.1",
    "deprecated==1.2.18",
    "dill==0.3.9",
    "distlib==0.3.9",
    "django>=5.0.4",
    "django-admin-autocomplete-filter==0.7.1",
    "django-admin-rangefilter==0.13.0",
    "django-choices-field>=3.1.0",
    "django-extensions==3.2.3",
    "django-filter>=25.1",
    "django-graphql-auth>=0.3.7",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.2.2 ; python_full_version < '3.11'",
    "executing==2.2.0",
    "filelock==3.18.0",
    "flake8==7.2.0",
    "flask==2.2.5",
    "flask-appbuilder==4.5.3",
    "flask-babel==2.0.0",
    "flask-caching==2.3.1",
    "flask-jwt-extended==4.7.1",
    "flask-limiter==3.12",
    "flask-login==0.6.3",
    "flask-session==0.5.0",
    "flask-sqlalchemy==2.5.1",
    "flask-wtf==1.2.2",
    "frozenlist==1.5.0",
    "fsspec==2025.3.2",
    "gcloud==0.18.3",
    "google-re2==1.1.20240702",
    "googleapis-common-protos==1.69.2",
    "gql>=4.0.0",
    "graphql-core==3.2.6",
    "graphql-relay==3.2.0",
    "greenlet==3.1.1 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'",
    "grpcio==1.71.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "inflection==0.5.1",
    "iniconfig==2.1.0",
    "ipdb==0.13.13",
    "ipython==8.34.0 ; python_full_version < '3.11'",
    "ipython==9.0.2 ; python_full_version >= '3.11'",
    "ipython-pygments-lexers==1.1.1 ; python_full_version >= '3.11'",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "jsonpath-ng==1.7.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jwcrypto==1.5.6",
    "lazy-object-proxy==1.10.0",
    "limits==4.4.1",
    "linkify-it-py==2.0.3",
    "lockfile==0.12.2",
    "lxml==5.3.1",
    "mako==1.3.9",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "marshmallow-oneofschema==3.1.1",
    "marshmallow-sqlalchemy==0.28.2",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "methodtools==0.4.7",
    "more-itertools==10.6.0",
    "multidict==6.3.1",
    "numpy==2.2.4",
    "oauth2client==4.1.3",
    "openpyxl==3.1.3",
    "opentelemetry-api==1.31.1",
    "opentelemetry-exporter-otlp==1.31.1",
    "opentelemetry-exporter-otlp-proto-common==1.31.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.31.1",
    "opentelemetry-exporter-otlp-proto-http==1.31.1",
    "opentelemetry-proto==1.31.1",
    "opentelemetry-sdk==1.31.1",
    "opentelemetry-semantic-conventions==0.52b1",
    "ordered-set==4.1.0",
    "packaging==24.2",
    "pandas==2.2.2",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pendulum==3.0.0",
    "pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pillow>=12.0.0",
    "platformdirs==4.3.7",
    "pluggy==1.5.0",
    "ply==3.11",
    "prison==0.2.1",
    "promise==2.3",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.1",
    "protobuf==5.29.4",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.9",
    "ptyprocess==0.7.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pyathena==3.12.2",
    "pycodestyle==2.13.0",
    "pycparser==2.22 ; platform_python_implementation != 'PyPy'",
    "pycryptodome==3.22.0",
    "pyflakes==3.3.2",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pyparsing==3.2.3",
    "pyproject-api==1.9.0",
    "pyrebase4==4.8.0",
    "pytest==8.2.2",
    "pytest-django==4.8.0",
    "python-daemon==3.1.2",
    "python-dateutil==2.9.0.post0",
    "python-jwt==4.1.0",
    "python-nvd3==0.16.0",
    "python-slugify==8.0.4",
    "python3-saml==1.16.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redshift-connector==2.1.5",
    "referencing==0.36.2",
    "requests==2.32.3",
    "requests-toolbelt==0.10.1",
    "rfc3339-validator==0.1.4",
    "rich==13.9.4",
    "rich-argparse==1.7.0",
    "rpds-py==0.24.0",
    "rsa==4.9",
    "s3transfer==0.11.4",
    "scramp==1.4.5",
    "serpy==0.3.1",
    "setproctitle==1.3.5",
    "setuptools==78.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==1.4.54",
    "sqlalchemy-jsonfield==1.0.2",
    "sqlalchemy-redshift==0.8.14",
    "sqlalchemy-utils==0.41.2",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "strawberry-django-auth>=0.378.4",
    "strawberry-graphql-django>=0.65.1",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "termcolor==3.0.1",
    "text-unidecode==1.3",
    "time-machine==2.16.0 ; implementation_name != 'pypy'",
    "tomli==2.2.1 ; python_full_version < '3.11'",
    "tox==4.14.2",
    "traitlets==5.14.3",
    "typing-extensions==4.13.0",
    "tzdata==2025.2",
    "uc-micro-py==1.0.3",
    "unicodecsv==0.14.1",
    "universal-pathlib==0.2.6",
    "urllib3==1.26.20",
    "virtualenv==20.30.0",
    "watchtower==3.4.0",
    "wcwidth==0.2.13",
    "werkzeug==2.2.3",
    "wirerope==1.0.0",
    "wrapt==1.17.2",
    "wtforms==3.2.1",
    "xmlsec==1.3.14",
    "yarl==1.18.3",
    "zipp==3.21.0",
]

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']

[tool.pylint.'MESSAGES CONTROL']
disable = ["C0114", "C0115", "C0116"]
